--- a/Praticando/index.html
+++ b/Praticando/index.html
@@ -18,6 +18,7 @@
      <a href="www.alura.com.br" class="container__botao">Assine por 12x de R$ 120,00</a>
      <a href="www.alura.com" class="container__botao botao_secundario">Assinar somente o Alura+</a>
      <p class="container__aviso">O preço pode variar caso a assinatura seja feita em outros planos.</p>
+     <p>Alteração Teste para testar GIT e GITHUB</p>
      </div>
     </section>
 
